--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "attendancesheet",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
